[package]
name = "pouch"
version = "0.0.3"
authors = ["Horst Schwarz <horst.schwarz@joydev.com>"]
edition = "2018"

description = "PouchDB bindings (EARLY ALPHA)"
documentation = "https://docs.rs/pouch"
homepage = "https://pouch.rs"
repository = "https://github.com/joydev-horst/pouch"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
