[package]
name = "pouch"
version = "0.0.3-alpha"
authors = ["Horst Schwarz <horst.schwarz@joydev.com>"]
edition = "2018"

description = "Rust PouchDB bindings for WASM"
documentation = "https://docs.rs/pouch"
homepage = "https://pouch.rs"
repository = "https://github.com/joydev-horst/pouch"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

