[package]
name = "pouch"
version = "0.0.6-alpha"
authors = ["Horst Schwarz <horst.schwarz@joydev.com>"]
edition = "2018"

description = "Rust PouchDB bindings for WASM"
documentation = "https://docs.rs/pouch"
homepage = "https://pouch.rs"
repository = "https://github.com/joydev-horst/pouch"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

